# Forja_FN

./: .replit  app.py  auth.py  forms.py  forum.py  gamification.py  main.py  models.py  payment.py  pyproject.toml  routes.py  utils.py
attached_assets/: Pasted--Plataforma-de-Estudos-FN-Flask-Objetivo-Desenvolver-uma-plataforma-web-100-Python-Flask-pa-1747416908939.txt  Pasted-BuildError-werkzeug-routing-exceptions-BuildError-Could-not-build-url-for-endpoint-admin-dashboar-1747424132159.txt  Pasted-TypeError-TypeError-can-only-concatenate-str-not-int-to-str-Traceback-most-recent-call-las-1747424447976.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-ForumPost-is-undefined-Traceback-most-recent-1747427129869.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-Payment-is-undefined-Traceback-most-recent-c-1747428227900.txt  Pasted-UndefinedError-jinja2-exceptions-UndefinedError-User-is-undefined-Traceback-most-recent-call-1747425521997.txt
static/css/: styles.css
static/js/: admin.js  main.js  payment.js  quiz.js
templates/: dashboard.html  index.html  layout.html  login.html  profile.html  register.html
templates/admin/: courses.html  dashboard.html  users.html
templates/courses/: create.html  index.html  lesson.html  mission.html  mission_quiz.html  mission_results.html  missions.html  quiz.html  view.html
templates/errors/: 403.html  404.html  500.html
templates/forum/: category.html  create_topic.html  forum.html  index.html  topic.html
templates/payment/: checkout.html  success.html
templates/teacher/: courses.html  dashboard.html  (+1 more)
